--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,6 @@
 :root {
-  --background: #ffffff;
+  --background: #f0f1f2;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -35,8 +28,14 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+}
+
+footer p {
+  color: rgb(69, 68, 78);
 }
