--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -4,7 +4,7 @@ body {
   color: #333;
   margin: auto;
   height: auto;
-  width: 50%;
+  width: 70%;
   padding: 30px;
   align-items: center;
 }
@@ -17,6 +17,11 @@ header {
   border: 1px solid #ddd;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 30px;
+}
+
+img[alt="logo"] {
+  width: 30%;
+  height: 30%;
 }
 
 header h1 {
@@ -118,28 +123,35 @@ button[type="submit"]:hover {
 
 iframe {
   width: 100%;
-  height: 600px;
+  height: 650px;
   border: none;
 }
 
 /* Media query for smaller screens */
 @media screen and (max-width: 968px) {
   body {
-    width: 70%; /* Adjust width to 70% for smaller screens */
-    margin-top: 20px;
+    width: 95%; /* Adjust width to 70% for smaller screens */
+    margin-top: 10px;
     padding: 15px; /* Optional: Reduce padding for better spacing */
   }
 
-  .form-container {
-    width: 100%; /* Ensure form-container takes full width */
-    padding: 1.5rem; /* Adjust padding if needed */
+  header h1 {
+    font-size: 1.2rem; /* Adjust font size for smaller screens */
   }
 
-  header h1 {
-    font-size: 1.5rem; /* Adjust font size for smaller screens */
+  header p {
+    font-size: 0.8rem;
+    color: #666;
+    margin: 0.5rem 0 0;
+  }
+
+  img[alt="logo"] {
+    width: 40%;
+    height: 40%;
   }
 
   button[type="submit"] {
     font-size: 0.9rem; /* Slightly smaller button text */
   }
 }
+
