--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -127,6 +127,13 @@ iframe {
   border: none;
 }
 
+.loading-spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Media query for smaller screens */
 @media screen and (max-width: 968px) {
   body {
